--- a/index.html
+++ b/index.html
@@ -7,10 +7,231 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda-Commerce</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Shoes">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Bagpacks">Bagpacks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Subscrib">Subscrib</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Sliding -->
+        <div class="mt-5"></div>
+        <div class="container">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner rounded-bottom">
+                    <div class="carousel-item active">
+                        <div class="row banner p-3 d-flex align-items-center">
+                            <div class="col col-lg-7">
+                                <h2>Cool Dude Headphone</h2>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front of funky world.</p>
+                                <h2>$420</h2>
+                                <button class="btn-color btn-color-primary text-light">Buy Now</button>
+                            </div>
+                            <div class="col col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
 
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row banner bg-gradient p-3 d-flex align-items-center ">
+                            <div class="col col-lg-7">
+                                <h2>X-Box for your living room</h2>
+                                <p>This is the best X-box in the world for people who just want to waste time in
+                                    front of funky world.</p>
+                                <h2>$600</h2>
+                                <button class="btn-color btn-color-primary text-light">Buy Now</button>
+                            </div>
+                            <div class="col col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row banner bg-gradient p-3 d-flex align-items-center ">
+                            <div class="col col-lg-7">
+                                <h2>Mega LCD TV For Sports</h2>
+                                <p>This is the best tv in the world for people who just want to waste time in
+                                    front of funky world.</p>
+                                <h2>$1200</h2>
+                                <button class="btn-color btn-color-primary text-light">Buy Now</button>
+                            </div>
+                            <div class="col col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <!-- Catagories -->
+        <div class="container overflow-hidden my-3">
+            <div class="row g-3">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+                    <div
+                        class="p-3 border rounded bg-warning d-flex align-items-center text-white justify-content-between">
+                        <h2>Watch</h2>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+                    <div
+                        class="p-3 border rounded bg-success text-white d-flex align-items-center justify-content-between">
+                        <h2>Bag</h2>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+                    <div
+                        class="p-3 border rounded bg-info text-white d-flex align-items-center justify-content-between">
+                        <h2>Shoes</h2>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- Shoes -->
+        <Section class="container my-3" id="Shoes">
+            <h3>Shoes</h3>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card shadow-lg p-3 rounded h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <h3>$160</h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div>
+                            <button class="btn-color ">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg p-3 rounded h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <h3>$180</h3>
+                            <p class="card-text">This is a wider card with supporting nt. This content is a little bit
+                                longer.</p>
+                        </div>
+                        <div>
+                            <button class="btn-color ">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg p-3 rounded h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <h3>$360</h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div>
+                            <button class="btn-color ">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </Section>
+        <!-- Backpack -->
+        <Section class="container my-3" id="Bagpacks">
+            <h3>Bagpacks</h3>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card shadow-lg p-3 rounded h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <h3>$160</h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div>
+                            <button class="btn-color ">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg p-3 rounded h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Burton</h5>
+                            <h3>$280</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos sunt,
+                                incidunt molestiae quam nulla consectetur eligendi natus sequi, odio doloremque
+                                laudtio, ratione amet. Ducimus dicta esse
+                                sapiente similique, praesentium architecto.</p>
+                        </div>
+                        <div>
+                            <button class="btn-color ">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-lg p-3 rounded h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Panda</h5>
+                            <h3>$300</h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div>
+                            <button class="btn-color ">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </Section>
+        <!-- Subscrib  -->
+        <div class="container banner p-3 my-3 rounded d-flex justify-content-center align-items-center " id="Subscrib">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input type="text">
+                <br>
+                <button class="btn-color btn-color-warning mt-2">Submit</button>
+            </div>
+        </div>
+    </main>
+    <footer class="mt-4 text-center">
+        <p><small>©2023. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
