--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="#Bagpacks">Bagpacks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Subscrib">Subscrib</a>
+                            <a class="nav-link" href="#Subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -218,8 +218,8 @@
                 </div>
             </div>
         </Section>
-        <!-- Subscrib  -->
-        <div class="container banner p-3 my-3 rounded d-flex justify-content-center align-items-center " id="Subscrib">
+        <!-- Subscribe  -->
+        <div class="container banner p-3 my-3 rounded d-flex justify-content-center align-items-center " id="Subscribe">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
